[gd_scene load_steps=5 format=3 uid="uid://p808tvr5kpuh"]

[ext_resource type="Script" path="res://UIObjects/WeaponUI/ReloadingCrosshair.gd" id="1_xywdw"]
[ext_resource type="Texture2D" uid="uid://furybs1a5thl" path="res://Content/Default/Assets/UI/Weapon/ReloadProgressUnder.png" id="2_30fc2"]
[ext_resource type="Texture2D" uid="uid://boxh7b1t8sa7n" path="res://Content/Default/Assets/UI/Weapon/ReloadProgressOver.png" id="3_c01hu"]
[ext_resource type="Script" path="res://UIObjects/WeaponUI/PerfectZone.gd" id="4_3q3w0"]

[node name="ReloadingCrosshair" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xywdw")

[node name="ProgressCircle" type="TextureProgressBar" parent="."]
z_index = 1000
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 4
texture_under = ExtResource("2_30fc2")
texture_progress = ExtResource("3_c01hu")
radial_initial_angle = 90.0

[node name="PerfectZone" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_3q3w0")
